[package]
name = "rust-axum"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dgen"
path = "src/dgen/main.rs"

[dependencies]
serde_json = "1.0.107"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.33.0", features = ["full"] }
futures-util = "0.3.29"
tracing = "0.1.39"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"]}
axum = { version = "0.6.20", features = ["headers"] }
axum-extra = "0.8.0"
tokio-stream = "0.1.14"
futures = "0.3.29"
tower = { version = "0.4", features = ["util"] }
rand = "0.8.5"
async-stream = "0.3.5"
tower-http = { version = "0.4.0", features = ["fs", "trace"] }
